# reader

./: .gitignore  Dockerfile.source  build.gradle.kts  docker-compose.standalone.yml  docker-compose.yml
.github/workflows/: docker-build.yml
reader-rs/: Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.arm64  Dockerfile.full  source_debug.json  source_debug_v2.json
reader-rs/src/: lib.rs  main.rs
reader-rs/src/api/: book.rs  file.rs  group.rs  manage.rs  migration.rs  mod.rs  replace.rs  source.rs
reader-rs/src/engine/: analyze.rs  benchmarks.rs  book_source.rs  config.rs  cookie.rs  crypto.rs  css.rs  dingdian_test.rs  error.rs  flaresolverr.rs  http_client.rs  java_api_mapping.rs  js.rs  js_analyzer.rs  js_executor.rs  jsonpath.rs  login.rs  mod.rs  native_api.rs  native_api_registry.rs  native_executor.rs  native_file.rs  native_http.rs  prelude.rs  preprocessor.rs  query_ttf.rs  regex.rs  rule_analyzer.rs  search_engine.rs  source_rewriter.rs  source_transformer.rs  stats.rs  template.rs  utils.rs  webbook.rs  webview.rs
reader-rs/src/engine/analysis/: mod.rs  unified_analyzer.rs
reader-rs/src/engine/ast/: compiler.rs  mod.rs  parser.rs  pattern_matcher.rs  types.rs
reader-rs/src/engine/execution/: executor_factory.rs  executor_trait.rs  mod.rs
reader-rs/src/engine/js/: bridge_mapper.rs  mod.rs  shim.js
reader-rs/src/engine/native/: api_handler.rs  encoding.rs  misc.rs  mod.rs  storage.rs  string_ops.rs  time.rs
reader-rs/src/engine/parsers/: css.rs  jsonpath.rs  jsoup.rs  mod.rs  parser_factory.rs  regex.rs  xpath.rs
reader-rs/src/models/: book.rs  chapter.rs  group.rs  mod.rs  replace_rule.rs  response.rs  source.rs  source_rule.rs
reader-rs/src/services/: book.rs  group.rs  http.rs  migration.rs  mod.rs  replace.rs  source.rs
reader-rs/src/storage/: kv.rs  mod.rs
reader-rs/storage/data/: bookSources.json
web-v3/: package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.ts
web-v3/docs/: CUSTOM_VOICE_TTS.md
web-v3/public/: manifest.json  sw.ts
web-v3/src/: App.vue  index.css  index.ts
web-v3/src/api/: book.ts  client.ts  explore.ts  group.ts  index.ts  manage.ts  replace.ts  source.ts
web-v3/src/components/: AIPanel.vue  ConfirmDialog.vue  LoginModal.vue  ReadSettings.vue
web-v3/src/components/book/: BookCard.vue  BookInfoModal.vue  BookSourcePicker.vue  ChapterList.vue  ChapterSummary.vue
web-v3/src/components/common/: EmptyState.vue  LoadingGrid.vue  ManageModeBar.vue  PageHeader.vue  PageToolbar.vue  index.ts
web-v3/src/components/reader/: ContentWarningBanner.vue  ReaderBottomBar.vue  ReaderTTSPanel.vue  ReaderToolbar.vue  index.ts
web-v3/src/components/replace/: EditRule.vue  ImportRule.vue
web-v3/src/components/source/: EditSource.vue  ImportSource.vue  SourceSubscription.vue
web-v3/src/components/ui/: FloatingButton.vue  GlassCard.vue  LazyImage.vue  SkeletonLoader.vue  index.ts
web-v3/src/components/ui/alert-dialog/: AlertDialog.vue  AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogFooter.vue  AlertDialogHeader.vue  AlertDialogTitle.vue
web-v3/src/components/ui/button/: index.ts
web-v3/src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogHeader.vue  DialogTitle.vue
web-v3/src/components/ui/dropdown-menu/: DropdownMenu.vue  DropdownMenuContent.vue  DropdownMenuGroup.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  DropdownMenuSeparator.vue  DropdownMenuTrigger.vue
web-v3/src/components/ui/error/: ErrorState.vue
web-v3/src/components/ui/input/: Input.vue
web-v3/src/components/ui/label/: Label.vue
web-v3/src/components/ui/loading/: LoadingOverlay.vue  LoadingSpinner.vue
web-v3/src/components/ui/scroll-area/: ScrollBar.vue
web-v3/src/composables/: useAI.ts  useAICache.ts  useConfirm.ts  useCustomTTS.ts  useErrorHandler.ts  useListManagement.ts  useMessage.ts  useTTS.ts  useVirtualScroll.ts
web-v3/src/constants/: ai.ts  api.ts  cache.ts  index.ts  ui.ts
web-v3/src/pages/: ai-analysis-settings.vue  ai-settings.vue  book-group.vue  book-manage.vue  explore.vue  index.vue  reader.vue  replace-rule.vue  search.vue  settings.vue  sources.vue  voice-settings.vue
web-v3/src/router/: index.ts
web-v3/src/stores/: ai.ts  index.ts  reader.ts  settings.ts  user.ts  voice.ts
web-v3/src/styles/: main.css
web-v3/src/types/: ai.ts  voice.ts
web-v3/src/utils/: cache-manager.ts  logger.ts
web-v3/src/workers/: ai-worker.ts
(+6 files in other folders)
