[package]
name = "reader-rs"
version = "0.1.0"
edition = "2021"
authors = ["Reader Team"]
description = "A modern book reader backend written in Rust"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "rustls-tls", "blocking"] }

# HTML/XML Parsing
scraper = "0.20"              # CSS selectors

# JSON Query
jsonpath-rust = "0.7"

# Regex
regex = "1"

# Async
futures = "0.3"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
md5 = "0.7"
hex = "0.4"
urlencoding = "2.1"

# JavaScript Engine (ES2023 support)
rquickjs = { version = "0.10", features = ["full-async", "parallel"] }
# Keep boa for transition period (optional)
boa_engine = { version = "0.21", optional = true }

# Additional crypto
base64 = "0.22"
aes = "0.8"
cbc = "0.1"

# Encoding
encoding_rs = "0.8"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
cipher = "0.4.4"
des = "0.8"

[features]
default = ["legacy-boa"]
legacy-boa = ["boa_engine"]

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
