[package]
name = "reader-rs"
version = "0.1.0"
edition = "2021"
authors = ["3kaiu"]
description = "A modern book reader backend written in Rust"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
# HTTP Client with Layout Impersonation (TLS Fingerprinting)
rquest = { version = "5", features = ["socks", "gzip", "brotli", "cookies", "json"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "cookies", "gzip", "brotli", "socks", "http2", "charset"] }


# HTML/XML Parsing
scraper = "0.20"              # CSS selectors

# JSON Query
jsonpath-rust = "0.7"

# Regex
regex = "1"

# Async
futures = "0.3"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
md5 = "0.7"
hex = "0.4"
urlencoding = "2.1"

# JavaScript Engine (ES2023 support)
rquickjs = { version = "0.10", features = ["full-async", "parallel"] }
# Keep boa for transition period (optional)
boa_engine = { version = "0.21", optional = true }

# JavaScript AST Parser (Oxc) - for static analysis
oxc_allocator = "0.52"
oxc_ast = "0.52"
oxc_parser = "0.52"
oxc_span = "0.52"
oxc_syntax = "0.52"


# Additional crypto
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"

# Encoding
encoding_rs = "0.8"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
cipher = "0.4.4"
des = "0.8"

# ZIP handling
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# Font parsing (for anti-crawl)
ttf-parser = "0.25"

# Headless browser for WebView rendering (optional)
headless_chrome = { version = "1.0", optional = true }
once_cell = "1.21.3"
html-escape = "0.2.13"
ecb = "0.1.2"
tantivy = { version = "0.22", default-features = false, features = ["mmap", "stopwords"] }
jieba-rs = "0.6"

[features]
default = ["legacy-boa"]
legacy-boa = ["boa_engine"]
webview = ["headless_chrome"]


[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "thin"        # Speed up build time (was true/fat)
codegen-units = 16  # Enable parallel code generation (was 1)
opt-level = "z"
strip = true
panic = "abort"     # Reduce binary size by removing unwind tables
